<resources>
    <string name="app_name">不二海淘</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="tab_index">首页</string>
    <string name="tab_clasify">分类</string>
    <string name="tab_store">商铺</string>
    <string name="tab_my">我的</string>
    <string name="yes">确定</string>
     <string name="index_recommand">推荐商品</string>
    <string name="dialog_type_1">服装</string>
    <string name="dialog_type_2">鞋靴箱包</string>
    <string name="dialog_type_3">户外</string>
    <string name="dialog_type_4">珠宝</string>
    <string name="dialog_type_5">手机数码</string>
    <string name="dialog_type_6">家电办公</string>
    <string name="dialog_type_7">护肤彩妆</string>
    <string name="dialog_type_8">母婴用品</string>
    <string name="dialog_type_9">家居</string>
    <string name="dialog_type_10">家装设计</string>
    <string name="dialog_type_11">美食</string>
    <string name="dialog_type_12">汽车摩托</string>
    <string name="dialog_type_13">花鸟文娱</string>
    <string name="dialog_type_14">生活</string>
    <string name="dialog_type_15">更多服务</string>
    <string name="dialog_type_more">全部</string>
   <string name="title_my">我的海淘</string>
  <string name="title_index">首页</string>
  <string name="title_shop">商家</string>
  <string name="title_set">设置</string>
  <string name="title_login">登录</string>
  <string name="title_regist">注册</string>
  <string name="title_goods_detail">商品详情</string>
  <string name="title_shop_detail">商铺详情</string>
  <string name="title_info_detail">完善信息</string>
  <string name="title_info">个人信息</string>
  <string name="title_shop_publish">发布商品</string>
  <string name="title_shop_manage">商品管理</string>
  <string name="title_relation">我的亲友团</string>
  <string name="title_suggest">反馈建议</string>
  <string name="title_about">关于我们</string>
  <string name="title_code">二维码</string>
  <string name="title_location">位置</string>
  <string name="title_selectmap">请选择位置</string>
    <string name="myactivity_tips">每一天，我们都期待新的不二朋友</string>
    <string name="myactivity_login">登陆</string>
    <string name="my_money_tag">我的钱包</string>
    <string name="my_points_tag">积分</string>
    <string name="my_points">0</string>
    <string name="signIn">签到送积分</string>
    <string name="add_five">+5</string>
    <string name="NoPay">待付款</string>
    <string name="notransport">待发货</string>
    <string name="noget">待收货</string>
    <string name="haveget">已收货</string>
    <string name="my_address">我的收货地址</string>
    <string name="my_store">我的收藏</string>
    <string name="my_points_mall">积分商城</string>
    <string name="my_set">设置</string>
    <string name="po_shopinglist">晒单圈</string>
    <string name="typeinusername">请输入昵称:</string>
  <string name="login_name">账号</string>
  <string name="login_pass">密码</string>
  <string name="login_name_hint">请填写手机号</string>
  <string name="login_pass_hint">请填写密码</string>
  <string name="forgetPassWord">忘记密码？</string>
  <string name="regist">注册</string>
  <string name="getregistcode">点击获取验证码</string>
  <string name="certification">实名认证</string>
  <string name="certifi">认证</string>
  <string name="uploadidCard">上传身份证正反面</string>
  <string name="datestyle">格式:2015-01-01</string>
  <string name="birthday">出生日期</string>
  <string name="resetpasswd">重置密码</string>
  <string name="aboutus">关于我们</string>
  <string name="updateapp">版本更新</string>
  <string name="aboutapp">应用说明</string>
  <string name="logout">退出登陆</string>
  <string name="lastversion">最新版本1.0</string>
  <string name="pointsdetail">积分详情</string>
  <string name="name">姓名</string>
  <string name="defaultaddress">[默认]</string>
  <string name="address">收货地址</string>
  <string name="addNewAddress">添加新地址</string>
  <string name="someone">收货人</string>
  <string name="phonenumber">手机号码</string>
  <string name="postnumber">邮政编码</string>
  <string name="delateaddress">删除收货地址</string>
  <string name="area">所在地区</string>
  <string name="origen">省、市、区(点击选择区域)</string>
  <string name="setDefaultAddress">设为默认收货地址</string>
  <string name="detailAddress">详细地址</string>
<string name="xlistview_footer_hint_normal">查看更多</string>
<string name="xlistview_footer_hint_ready">松开载入更多</string>
<string name="xlistview_header_hint_normal">下拉刷新</string>
<string name="xlistview_header_last_time">最后更新时间：</string>
<string name="xlistview_header_hint_ready">释放刷新</string>
<string name="xlistview_header_hint_loading">正在加载…</string>
<string name="originOfPoints">积分来源:</string>
<string name="mypoints">我的积分:</string>
<string name="exchange">立即兑换</string>
<string name="pointsMall">积分商城</string>
<string name="exchangedetail">兑换详情 </string>
<string name="exchangerecord">兑换记录 </string>
<string name="addAdress">新增收货地址 </string>
<string name="productInfo">兑换商品信息 </string>
<string name="comment">备注留言: </string>
<string name="comment_hint">选填，可以写下你对兑换商品的需要</string>
<string name="classify">分类</string>
<string name="classify_address">临沂 </string>
<string name="classify_baby">宝贝</string>
<string name="classify_search">搜索附近商品、商铺</string>
<string name="classify_search_product">搜索宝贝的名称</string>
<string name="classify_ladys">女士服装</string>
<string name="product_tab1">默认</string>
<string name="product_tab2">销量</string>
<string name="product_tab3">价格</string>
<string name="product_tab4">好评</string>
<string name="myshaidanquan">我的晒单圈</string>
<string name="publish">发布</string>
<string name="mypublish">我发表的</string>
<string name="mycomment">我评论的</string>
<string name="mypurse">我的钱包</string>
<string name="chargenow">立即充值</string>
<string name="pleaseinputnumber">请输入充值金额</string>
<string name="edit">编辑</string>
<string name="product">产品</string>
<string name="orderdetail">订单详情</string>
    <string name="feed_detail">feed详情页面</string>
    <string name="msg">进入友盟社区</string>
    <string name="user_info">用户信息页面</string>
    <string name="search_topic">话题搜索</string>
    <string name="select_location">话题搜索</string>
    <string name="follow_topic">话题搜索</string>
    <string name="umeng_comm_login">登录</string>
    <string name="umeng_comm_login_statement">我们不会在未经同意的情况下在任何社交媒体发布消息</string>
    <string name="umeng_comm_new_post">新鲜事</string>
    <string name="umeng_comm_edittext_hint">分享新鲜事&#8230;#此处添加话题更好哦#</string>
    <string name="umeng_comm_3rdparty_login">使用第三方账户登录</string>
    <string name="umeng_comm_username">MR.SIMPLE</string>
    <string name="umeng_comm_posted_msg">消息</string>
    <string name="umeng_comm_followed_topic">关注话题</string>
    <string name="umeng_comm_followed_user">关注</string>
    <string name="umeng_comm_my_fans">粉丝</string>
    <string name="umeng_comm_topic_followed">取消关注</string>
    <string name="umeng_comm_follow_topic">关注</string>
    <string name="umeng_comm_search_hint">搜索话题</string>
    <string name="umeng_comm_search_topic_failed">未找到匹配的话题</string>
    <string name="umeng_comm_search_key">搜索</string>
    <string name="umeng_comm_search_keyword_input">请输入话题关键字&#8230;</string>
    <string name="umeng_comm_fetching_topics">话题获取中&#8230;</string>
    <string name="umeng_comm_ok">确定</string>
    <string name="umeng_comm_preview">预览</string>
    <string name="umeng_comm_friends">我的好友</string>
    <string name="umeng_comm_lastes_friends">最近联系人</string>
    <string name="umeng_comm_pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_comm_user_follow">关注</string>
    <string name="umeng_comm_cancel_follow">取消关注</string>
    <string name="umeng_comm_load_more">加载更多</string>
    <string name="umeng_comm_loading">加载中</string>
    <string name="umeng_comm_comment_load_more">&#8230;</string>
    <string name="umeng_comm_cancel">取消</string>
    <string name="umeng_comm_prev">预览</string>
    <string name="umeng_comm_camera">Camera</string>
    <string name="umeng_comm_image_overflow">抱歉,最多只能选择9张图片</string>
    <string name="umeng_comm_delete_feed">确认删除这条消息?</string>
    <string name="umeng_comm_this_feed">这条消息?</string>
    <string name="umeng_comm_post_comment_success">评论成功</string>
    <string name="umeng_comm_post_comment_failed">评论失败</string>
    <string name="umeng_comm_delete_comment">确认删除这条评论?</string>
    <string name="umeng_comm_delete_photo">确认删除这张图片?</string>
    <string name="umeng_comm_desc">contentDescription</string>
    <string name="umeng_comm_topic_create_success">话题创建成功</string>
    <string name="umeng_comm_topic_create_failed">话题创建失败</string>
    <string name="umeng_comm_topic_follow_success">关注成功</string>
    <string name="umeng_comm_topic_follow_failed">关注失败</string>
    <string name="umeng_comm_topic_cancel_success">取消关注成功</string>
    <string name="umeng_comm_topic_cancel_failed">取消关注失败</string>
    <string name="umeng_comm_send_success">发送成功</string>
    <string name="umeng_comm_send_ing">发送中&#8230;</string>
    <string name="umeng_comm_send_failed">发送失败</string>
    <string name="umeng_comm_topic_search_no_keyword">请输入关键字</string>
    <string name="umeng_comm_logining">登录中&#8230;</string>
    <string name="umeng_comm_nickname">昵称</string>
    <string name="umeng_comm_male">男</string>
    <string name="umeng_comm_female">女</string>
    <string name="umeng_comm_gender">性别</string>
    <string name="umeng_comm_age">年龄</string>
    <string name="umeng_comm_telephone">电话</string>
    <string name="umeng_comm_account_setting">账号设置</string>
    <string name="umeng_comm_save">保 存</string>
    <string name="umeng_comm_search_friend">搜索好友</string>
    <string name="umeng_comm_search_location">搜索位置</string>
    <string name="umeng_comm_user_center">个人中心</string>
    <string name="umeng_comm_user_center_no_name">请输入昵称</string>
    <string name="umeng_comm_user_center_no_age">请输入年龄</string>
    <string name="umeng_comm_user_center_no_age_valid">年龄有效范围0~120</string>
    <string name="umeng_comm_follow_user_failed">关注用户失败</string>
    <string name="umeng_comm_follow_user_success">关注用户成功</string>
    <string name="umeng_comm_follow_cancel_failed">取消关注失败</string>
    <string name="umeng_comm_follow_cancel_success">取消关注成功</string>
    <string name="umeng_comm_my_friends">我的好友</string>
    <string name="umeng_comm_content_invalid">请输入评论内容</string>
    <string name="umeng_comm_fetching_loc">位置获取中</string>
    <string name="umeng_comm_fetching_loc_failed">位置获取失败</string>
    <string name="umeng_comm_load">加载</string>
    <string name="umeng_comm_zero">0</string>
    <string name="umeng_comm_search">搜索</string>
    <string name="umeng_comm_load_complete">已经全部加载咯~</string>
    <string name="umeng_comm_req_failed">抱歉，请求失败,请检查您的网络~</string>
    <string name="umeng_comm_followed_user_failed">获取已关注列表失败&#8230;</string>
    <string name="umeng_comm_followed_no_user">您暂时未关注好友</string>
    <string name="umeng_comm_update_userinfo_failed">更新用户信息失败</string>
    <string name="umeng_comm_update_info_success">更新用户信息成功</string>
    <string name="umeng_comm_login_failed">登录失败，请重试&#8230;</string>
    <string name="umeng_comm_no_new_friends">暂无最新好友</string>
    <string name="umeng_comm_delete_failed">删除失败</string>
    <string name="umeng_comm_delete_success">删除成功</string>
    <string name="umeng_comm_setting_user">用户设置</string>
    <string name="umeng_comm_update_user_info">用户信息更新中</string>
    <string name="umeng_comm_update_user_icon">用户头像更新中</string>
    <string name="umeng_comm_setting_msg">消息设置</string>
    <string name="umeng_comm_setting">设置</string>
    <string name="umeng_comm_setting_logout">退出登录</string>
    <string name="umeng_comm_setting_push">推送设置</string>
    <string name="umeng_comm_feed_detail">消息详情</string>
    <string name="umeng_comm_parse_image_failed">解析图片失败</string>
    <string name="umeng_comm_reply">回复</string>
    <string name="umeng_comm_colon">：</string>
    <string name="umeng_comm_load_topic_failed">获取话题失败</string>
    <string name="umeng_comm_not_have_more">没有更多话题咯~</string>
    <string name="umeng_comm_not_choose_image">还未选择图片</string>
    <string name="umeng_comm_last_image">已经最后一张图片了</string>
    <string name="umeng_comm_first_image">已经是第一张图片了</string>
    <string name="umeng_comm_no_content">请输入内容</string>
</resources>