<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_grey" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
    	android:background="@null" >
        <!-- 导入title -->
        <include layout="@layout/layout_head" />
        <ImageButton
            android:id="@+id/back"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="15dp"
            android:src="@drawable/symbol_left1" />
        <ImageButton
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/shopping_cart" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back"
            android:layout_toLeftOf="@id/buy"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_corner_down" >
            <TextView
                android:id="@+id/search_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:text="@string/classify_baby"
                android:textColor="#808080"
             	android:drawableRight="@drawable/search_classify"
                android:textSize="16sp" />
            <EditText
				android:id="@+id/search_input"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginLeft="5dp"
				android:layout_toRightOf="@id/search_detail"
				android:hint="@string/classify_search_product"
				android:imeOptions="actionSearch"
				android:textColor="#000"
				style="@style/edit_text"
				android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>
	<LinearLayout
		android:id="@+id/ll_tabs"
		android:baselineAligned="true"
		android:layout_width="match_parent"
		android:layout_height="42dp"
		android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/ll_tab1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_sort_below"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/product_tab1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_tab2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_sort_top_below"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/product_tab2"  />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_tab3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_sort_below"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/product_tab3" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_tab4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_sort_below"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/product_tab4" />
        </LinearLayout>
	</LinearLayout>
	<com.external.maxwin.view.XListView 
	    android:id="@+id/list_product"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	</com.external.maxwin.view.XListView>
</LinearLayout>