<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_grey" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <!-- 导入title -->

        <include layout="@layout/layout_head" />

        <TextView
            android:id="@+id/textView3"
            style="@style/title_head"
            android:text="@string/address"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/address_back"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/symbol_left1" />

        <TextView
            android:id="@+id/tv_yesorchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/yes"
            android:textColor="@color/white" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
         />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/white" >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/someone"
            android:textColor="@color/grey"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view1"
        android:background="@color/white" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/phonenumber"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10" />

    </RelativeLayout>

    <View
        android:id="@+id/View01"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout01"
         />

    <RelativeLayout
        android:id="@+id/RelativeLayout02"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/View01"
        android:background="@color/white" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/postnumber"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10" >

        </EditText>

    </RelativeLayout>

    <View
        android:id="@+id/View02"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout02"
         />

    <RelativeLayout
        android:id="@+id/RelativeLayout03"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/View02"
        android:background="@color/white" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/area"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_choseOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="49dp"
            android:text="@string/origen" />

    </RelativeLayout>

    <View
        android:id="@+id/View03"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout03"
        />

    <RelativeLayout
        android:id="@+id/RelativeLayout04"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/View03"
        android:background="@color/white" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/detailAddress"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_addressDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_delate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout04"
        android:layout_marginTop="32dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/tv_delate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/delateaddress"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </RelativeLayout>
    
    
    <RelativeLayout
    android:id="@+id/rl_setDefaultAddress"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="@color/white" >

    <Button
        android:id="@+id/btn_setDefaultAddress"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_btn_background_yellow"
        android:textColor="@color/white"
        android:text="@string/setDefaultAddress" />

</RelativeLayout>

</RelativeLayout>