<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
     >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- TabWidget管理所有的选项卡，id名是android指定的 -->

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/tab_rgroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/theme_grey"
            android:orientation="horizontal" >
            <!-- style="@style/tab_button_bottom" -->

            <RadioButton
                android:id="@+id/tab_radio1"
                style="@style/tab_button_bottom"
                android:checked="true"
                android:drawableTop="@drawable/tab_dw_index"
                android:text="@string/tab_index" />

            <RadioButton
                android:id="@+id/tab_radio2"
                style="@style/tab_button_bottom"
                android:drawableTop="@drawable/tab_dw_shop"
                android:text="@string/tab_clasify"
                />

      

            <RadioButton
                android:id="@+id/tab_radio3"
                style="@style/tab_button_bottom_shopcar"
                android:drawableTop="@drawable/tab_dw_manage"
                 />
<!--                 android:text="@string/tab_manager" -->

            <RadioButton
                android:id="@+id/tab_radio4"
                style="@style/tab_button_bottom"
                android:drawableTop="@drawable/tab_dw_set"
                 android:text="@string/tab_store"
                 />
<!--                 android:text="@string/tab_set" -->
            <RadioButton
                android:id="@+id/tab_radio5"
                style="@style/tab_button_bottom"
                android:drawableTop="@drawable/tab_dw_my"
                android:text="@string/tab_my"
                />
<!--                 android:text="@string/tab_my"  -->
        </RadioGroup>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/tab_rgroup"
            android:background="@color/white"
             >
        </FrameLayout>
    </RelativeLayout>

</TabHost>